# RagLaw

./: .env.example  .gitignore  pyproject.toml
.secrets/: README.md
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: chat.py  draft.py  retrieve.py
app/db/: connection.py
app/prompts/: drafting_system.txt  qa_system.txt
app/schemas/: chat.py  draft.py  retrieval.py
app/services/: __init__.py  citation_service.py  draft_guidance.py  draft_service.py  exceptions.py  llm_service.py  query_normalization.py  retrieval_service.py  template_service.py
data/: manifest.jsonl  中华人民共和国消费者权益保护法实施条例.docx  侵害消费者权益行为处罚办法.docx  合同违法行为监督处理办法.docx  民法典-侵权责任编.docx  民法典-合同编.docx  网络交易平台规则监督管理办法.docx
db/: schema.sql
design-system/law-helper/: MASTER.md
docs/: backend_mvp_runbook.md  data.md  database_pipeline.md  embedding_pipeline.md  frontend_api_contract.md  ingestion_pipeline.md  init.md  progress_summary.md  security_and_secrets.md
docs/phase2_materials/: README.md  law_民事诉讼法_起诉受理证据管辖摘录.md  law_消费者权益保护法_退款退货平台责任摘录.md  law_电子商务法_平台责任摘录.md  rule_12315投诉流程说明.md  rule_侵害消费者权益行为处罚办法_重点摘录.md  rule_消费者权益保护法实施条例_投诉处理退货规则摘录.md  rule_网上立案流程说明.md  rule_起诉材料要求.md  template_催告函_退款退货.json  template_催告函_退款退货.md  template_投诉信_商品质量.json  template_投诉信_商品质量.md  template_民事起诉状_网络购物纠纷.json  template_民事起诉状_网络购物纠纷.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/router/: index.js
scripts/: build_mock_embeddings.py  build_openai_embeddings.py  import_materials.py  load_embeddings_to_pg.py  load_ingestion_to_pg.py
(+32 files in other folders)
